--- a/my_rb1_gazebo/CMakeLists.txt
+++ b/my_rb1_gazebo/CMakeLists.txt
@@ -7,12 +7,21 @@ project(my_rb1_gazebo)
 
 ## Find catkin macros and libraries if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz) is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  rospy
-  urdf
-  xacro
+  roscpp
+  controller_manager
+  transmission_interface
   gazebo_ros
   joint_state_publisher
   robot_state_publisher
+  diff_drive_controller
+)
+
+catkin_package(
+  CATKIN_DEPENDS roscpp controller_manager transmission_interface gazebo_ros joint_state_publisher robot_state_publisher diff_drive_controller
+)
+
+include_directories(
+  ${catkin_INCLUDE_DIRS}
 )
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -54,16 +63,16 @@ find_package(catkin REQUIRED COMPONENTS
 ## The catkin_package macro generates cmake config files for your package Declare things to be passed to dependent projects INCLUDE_DIRS: uncomment this if your package contains 
 ## header files LIBRARIES: libraries you create in this project that dependent projects also need CATKIN_DEPENDS: catkin_packages dependent projects also need DEPENDS: system 
 ## dependencies of this project that dependent projects also need
-catkin_package(
+# catkin_package(
 #  INCLUDE_DIRS include LIBRARIES my_rb1_gazebo CATKIN_DEPENDS rospy urdf xacro DEPENDS system_lib
-)
+# )
 ###########
 ## Build ##
 ###########
 ## Specify additional locations of header files Your package locations should be listed before other locations
-include_directories(
+# include_directories(
 # include
-  ${catkin_INCLUDE_DIRS} )
+#   ${catkin_INCLUDE_DIRS} )
 ## Declare a C++ library
 # add_library(${PROJECT_NAME} src/${PROJECT_NAME}/my_rb1_gazebo.cpp )
 ## Add cmake target dependencies of the library as an example, code may need to be generated before libraries either from message generation or dynamic reconfigure
